chore: prepare for PR

--- a/.env.example
+++ b/.env.example
@@ -195,6 +195,20 @@ KIMI_BASE_URL=
 # Example: OPENCLAW_DOCKER_APT_PACKAGES=ffmpeg build-essential
 # OPENCLAW_DOCKER_APT_PACKAGES=
 
+# ── Persistent binaries (optional) ───────────────────────────────────────────
+# Directory for persistent binaries, automatically added to PATH.
+# Place binaries here (or install skills) and they survive container restarts.
+# OPENCLAW_PERSISTENT_BIN=/data/bin
+
+# Custom init script that runs on every container start (must be executable).
+# Use for installing Homebrew, setting up tools, etc. Should be idempotent.
+# WARNING: Init scripts run with container privileges. Review scripts from untrusted sources before deployment.
+# OPENCLAW_DOCKER_INIT_SCRIPT=/data/init.d/init.sh
+
+# Homebrew prefix for persistent linuxbrew installation.
+# When Homebrew is installed here, its bin/sbin dirs are added to PATH automatically.
+# HOMEBREW_PREFIX=/data/homebrew
+
 # ── Port ─────────────────────────────────────────────────────────────────────
 PORT=8080
 
