chore: bake linuxbrew into base docker image
Simplify the container setup by pre-installing Linuxbrew and build
dependencies (git, build-essential, file, procps) in Dockerfile.base
instead of requiring runtime setup via persistent directories.

- Remove OPENCLAW_PERSISTENT_BIN, HOMEBREW_PREFIX config variables
- Simplify OPENCLAW_DOCKER_INIT_SCRIPT to only run custom scripts, no
  persistent bin/brew path setup
- Update entrypoint.sh to skip persistent directory initialization
- Update documentation to reflect baked-in Linuxbrew setup

--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -43,7 +43,18 @@ RUN apt-get update \
   && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
     ca-certificates \
     curl \
+    git \
+    build-essential \
+    file \
+    procps \
   && rm -rf /var/lib/apt/lists/*
+
+# Install Linuxbrew (skills use brew to install tool dependencies)
+RUN NONINTERACTIVE=1 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+ENV HOMEBREW_PREFIX="/home/linuxbrew/.linuxbrew" \
+    HOMEBREW_CELLAR="/home/linuxbrew/.linuxbrew/Cellar" \
+    HOMEBREW_REPOSITORY="/home/linuxbrew/.linuxbrew/Homebrew" \
+    PATH="/home/linuxbrew/.linuxbrew/bin:/home/linuxbrew/.linuxbrew/sbin:${PATH}"
 
 # Install under /opt/openclaw/app so that ../../ from dist/ lands at /opt/openclaw
 # which is where we place the symlinks. This avoids polluting / with project files.
