Fix: Add explicit network for Dokploy deployment    Dokploy doesn't create a shared network by default, causing nginx   to fail resolving the 'browser' hostname. Explicitly define a bridge   network to ensure service discovery works.    Fixes container DNS resolution error:   "host not found in upstream 'browser'"

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
       # Hooks (optional)
       # - HOOKS_ENABLED=true
       # - HOOKS_TOKEN=my-hook-secret
+    networks:
+        - openclaw-net
     volumes:
       - openclaw-data:/data
       # Optional: custom JSON config for complex settings (groups, plugins, etc.)
@@ -35,11 +37,17 @@ services:
       - PGID=1000
       - TZ=Etc/UTC
       - CHROME_CLI=--remote-debugging-port=9222
+    networks:
+        - openclaw-net
     volumes:
       - browser-data:/config
     shm_size: 2g
     restart: unless-stopped
 
+networks:
+    openclaw-net:
+      driver: bridge
+      
 volumes:
   openclaw-data:
   browser-data:
